--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/breeze": "*",
         "laravel/framework": "^10.0",
-        "laravel/sanctum": "^3.2",
+        "laravel/sanctum": "*",
         "laravel/tinker": "^2.8"
     },
     "require-dev": {
